# machine-learning-zoomcamp-23

./: .gitignore  pyproject.toml
Module 1/: JOTTINGS.md  homework.ipynb  notebook.ipynb
Module 10/: JOTTINGS.md  Makefile  Pipfile  docker-compose.yml  gateway.dockerfile  gateway.py  test.py  tfserving-model.dockerfile
Module 10/clothing_model/: fingerprint.pb  saved_model.pb
Module 10/clothing_model/variables/: variables.index
Module 10/kube-config/: eks-cluster-config.yml  gateway-deployment.yml  gateway-service.yml  model-deployment.yml  model-service.yml
Module 10/simple-k8s-example/: Dockerfile  Makefile  app.py
Module 10/simple-k8s-example/k8s/: deployment.yml  service.yml
Module 10/simple-k8s-example/templates/: index.html
Module 11/: JOTTINGS.md
Module 2/: JOTTINGS.md  homework.ipynb  notebook.ipynb
Module 3/: JOTTINGS.md  homework.ipynb  notebook.ipynb
Module 4/: homework.ipynb  notebook.ipynb
Module 5/: Dockerfile  JOTTINGS.md  Makefile  ping.py  predict.py  pyproject.toml  start-web.sh  train_churn_model.py
Module 5/homework/: Dockerfile  Makefile  Pipfile  notebook.ipynb
Module 5/homework/web/: main.py
Module 5/web/: main.py
Module 6/: notebook.ipynb
Module 8/: notebook.ipynb
Module 9/: Dockerfile  JOTTINGS.md  Makefile  lambda_function.py  push-image-to-ecr.sh  test.py
