[tool.poetry]
name = "machine-learning-zoomcamp-23"
version = "0.1.0"
description = ""
authors = ["rexsimiloluwah <adetoyosi2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
