[tool.poetry]
name = "machine-learning-zoomcamp-23"
version = "0.1.0"
description = ""
authors = ["rexsimiloluwah <adetoyosi2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.26.0"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
Flask = "^3.0.0"
requests = "^2.31.0"
gunicorn = "^21.2.0"
scipy = "^1.4.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
